--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 11 17:28:32 1999  J"orn Rennecke <amylaar@cygnus.co.uk>
+
+	* sh.md (mulsi3): End mul.l sequence with a no-op move.
+
 Thu Mar 11 08:52:02 1999  Bruce Korb <korb@datadesign.com>
 	* Makefile.in: activated fixinc/mkfixinc.sh
 	* configure.in: activated fixinc/mkfixinc.sh
