* expr.c (expand_expr): Allow a CALL_EXPR with a mode wider than         MAX_INTEGER_COMPUTATION_MODE.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25714 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Fri Mar 12 00:51:43 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* expr.c (expand_expr): Allow a CALL_EXPR with a mode wider than
+	MAX_INTEGER_COMPUTATION_MODE.
+
 Thu Mar 11 14:00:58 1999  Richard Henderson  <rth@cygnus.com>
 
 	* alpha.h (HARD_REGNO_MODE_OK): Disallow QI/HImode in fp regs.
