--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-12  Andrew Haley  <aph@cygnus.com>
+
+	* jcf-path.c (add_entry): alloca len+2 rather than len+1 bytes;
+        we'll need a directory separator and a null character.
+
 Wed Mar 10 23:20:11 1999  Per Bothner  <bothner@cygnus.com>
 
 	* jcf-write.c (generate_bytecode_insns):  Handle __builtin_fmod, for %.
