Missing from fixincl-branch merge
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25727 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -3,6 +3,8 @@ Fri Mar 12 07:54:43 1999  Bruce Korb <korb@datadesign.com>
 	* fixinc/fixinc.*: Some changes from the fixincl-branch
 	were not applied (??!!).  Corrected.
 
+	* fixinc/Makefile.in: same thing.
+
 Fri Mar 12 00:51:43 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* expr.c (expand_expr): Allow a CALL_EXPR with a mode wider than
