--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Fri Mar 12 20:26:32 1999  David Edelsohn  <edelsohn@mhpcc.edu>
+
+	* configure.in ({rs6000,powerpc}-ibm-aix*): Set float_format to none.
+	* configure: Rebuilt.
+
 Fri Mar 12 20:45:30 1999  J"orn Rennecke <amylaar@cygnus.co.uk>
 
 	* unroll.c (loop_iterations): Don't return a final value for EQ
