--- a/egcs_1_1_branch/gcc/f/ChangeLog
+++ b/egcs_1_1_branch/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+1999-03-13  Craig Burley  <craig@jcb-sc.com>
+
+	* bugs.texi: Editorial fixes.
+
 1999-03-11  Craig Burley  <craig@jcb-sc.com>
 
 	* bugs.texi, g77.texi, news.texi: Point to URLs for live
