Document newly discovered bug
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@25749 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/egcs_1_1_branch/gcc/f/ChangeLog
+++ b/egcs_1_1_branch/gcc/f/ChangeLog
@@ -1,5 +1,9 @@
 1999-03-13  Craig Burley  <craig@jcb-sc.com>
 
+	* bugs.texi: Document newly discovered bug (19990313-*.f tests).
+
+1999-03-13  Craig Burley  <craig@jcb-sc.com>
+
 	* bugs.texi: Editorial fixes.
 
 1999-03-11  Craig Burley  <craig@jcb-sc.com>
