* alpha.h (HARD_REGNO_MODE_OK): Disallow QI/HImode in fp regs.         (MODES_TIEABLE_P): Update.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@25761 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/egcs_1_1_branch/gcc/ChangeLog
+++ b/egcs_1_1_branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Mar 11 14:00:58 1999  Richard Henderson  <rth@cygnus.com>
+
+	* alpha.h (HARD_REGNO_MODE_OK): Disallow QI/HImode in fp regs.
+	(MODES_TIEABLE_P): Update.
+
 Thu Mar 11 00:20:52 1999  Alexandre Oliva <oliva@dcc.unicamp.br>
 
 	* gcc.texi: Update bug reporting instructions to match
