Stamp ChangeLogs for release
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@25763 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/egcs_1_1_branch/gcc/testsuite/gcc.c-torture/ChangeLog
+++ b/egcs_1_1_branch/gcc/testsuite/gcc.c-torture/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 14 02:38:07 PST 1999 Jeff Law  (law@cygnus.com)
+
+	* egcs-1.1.2 Released.
+
 Thu Jun 18 15:12:30 1998  Michael Meissner  <meissner@cygnus.com>
 
 	* execute/980618-{1,2}.c: New tests that showed up m32r bugs.
