--- a/egcs_1_1_branch/config/ChangeLog
+++ b/egcs_1_1_branch/config/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 14 02:38:07 PST 1999 Jeff Law  (law@cygnus.com)
+
+	* egcs-1.1.2 Released.
+
 Mon Aug 31 17:50:53 1998  David Edelsohn  <edelsohn@mhpcc.edu>
 
 	* mh-aix43 (NM_FOR_TARGET): Add -X32_64 as well.
