--- a/egcs_1_1_branch/contrib/ChangeLog
+++ b/egcs_1_1_branch/contrib/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 14 02:38:07 PST 1999 Jeff Law  (law@cygnus.com)
+
+	* egcs-1.1.2 Released.
+
 1998-11-29  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* test_summary (EOF): remove double backslash
