--- a/egcs_1_1_branch/gcc/cp/ChangeLog
+++ b/egcs_1_1_branch/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 14 02:38:07 PST 1999 Jeff Law  (law@cygnus.com)
+
+	* egcs-1.1.2 Released.
+
 Sun Feb 21 20:38:00 1999  H.J. Lu  (hjl@gnu.org)
 
 	* decl2.c (start_objects): Make file scope constructors and
