--- a/egcs_1_1_branch/gcc/f/ChangeLog
+++ b/egcs_1_1_branch/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 14 02:38:07 PST 1999 Jeff Law  (law@cygnus.com)
+
+	* egcs-1.1.2 Released.
+
 1999-03-13  Craig Burley  <craig@jcb-sc.com>
 
 	* bugs.texi: Document newly discovered bug (19990313-*.f tests).
