--- a/egcs_1_1_branch/gcc/testsuite/ChangeLog
+++ b/egcs_1_1_branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 14 02:38:07 PST 1999 Jeff Law  (law@cygnus.com)
+
+	* egcs-1.1.2 Released.
+
 1998-07-25  Dave Love  <d.love@dl.ac.uk>
 
 	* g77.f-torture/execute/io0.f: New test.
