--- a/egcs_1_1_branch/texinfo/ChangeLog
+++ b/egcs_1_1_branch/texinfo/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 14 02:38:07 PST 1999 Jeff Law  (law@cygnus.com)
+
+	* egcs-1.1.2 Released.
+
 1999-02-24  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* lib/Makefile.in: Regen dependencies.
