--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+1999-03-14  Jason Merrill  <jason@yorick.cygnus.com>
+
+	* Makefile.in (search.o): Add dependency on varray.h.
+
 1999-03-13  Jason Merrill  <jason@yorick.cygnus.com>
 
 	* decl.c (duplicate_decls): Use same_type_p.
@@ -8,9 +12,9 @@
 	(check_ktype): Use same_type_p.
 	(check_btype): Use same_type_p.  Don't pull out TYPE_MAIN_VARIANT.
 	(build_qualified_name): Simplify logic.
+	(process_overload_item): Strip typedefs and quals at the top.
 	(build_mangled_name_for_type_with_Gcode): Remove call to
 	type_canonical_variant.
-	(process_overload_item): Strip typedefs and quals at the top.
 	(build_mangled_name): Likewise.  Remove support for old-style 
 	repeats, which have been disabled since 2.7.2.  Don't mess with 
 	TREE_USED.
